objects/EUR_CRM_PRS_Outlet_Type__c.object
<CustomObject>
    <description>This is created for the new approach for PROS and PROFS -  “PRS” (Pernod-Ricard Segmentation).

PR BG is the first country to use it.</description>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT (EUR_CRM_PRS_Group_Outlet_Type__r.EUR_CRM_PRS_Group_Outlet_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRS Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type__c</fullName>
        <label>PRS Group Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>PRS Outlet Types (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Outlet_Type</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Outlet_Type_Name__c</fullName>
        <label>PRS Outlet Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PRS Outlet Type (EU)</label>
    <listViews>
        <fullName>EUR_BE_PRS_Off_Trade_Outlet_Type_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Outlet_Type__c.EUR_BE_PRS_Off_Trade_Outlet_Type</value>
        </filters>
        <label>EUR BE PRS Off Trade Outlet Type View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_PRS_On_Trade_Outlet_Type_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Outlet_Type__c.EUR_BE_PRS_On_Trade_Outlet_Type</value>
        </filters>
        <label>EUR BE PRS On Trade Outlet Type View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Outlet_Types_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_PRS_Outlet_Type_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Outlet_Type__c.EUR_BG_PRS_Off_Trade_Outlet_Type</value>
        </filters>
        <label>EUR BG All PRS Outlet Types View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-O-{00000}</displayFormat>
        <label>PRS Outlet Type No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Outlet Types (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Off_Trade_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BE PRS Off Trade Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_On_Trade_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BE PRS On Trade Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Off_Trade_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BG PRS Off Trade Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Outlet_Type_EU</fullName>
        <active>true</active>
        <label>EUR BG PRS Outlet Type (EU)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>